# mandelbrot-acceleration

./: .gitignore  CMakeLists.txt  README.md
cuda/: CMakeLists.txt  renderthread.cpp  renderthread.h
cuda/cuda-library/: CMakeLists.txt  cudalibrary.cpp  cudalibrary.h  cudalibrary_global.h  kernel.cu  kernel.cuh  types.h
openmp/: CMakeLists.txt  renderthread.cpp
original/: CMakeLists.txt  renderthread.cpp
